k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aws-app
  template:
    metadata:
      labels:
        app: aws-app
    spec:
      serviceAccountName: app-sa
      containers:
        - name: aws-app
          image: 830663695860.dkr.ecr.us-east-1.amazonaws.com/aws-app-runner:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aws-app-service
spec:
  selector:
    app: aws-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aws-app-service
                port:
                  number: 80
